--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,15 @@
 	padding: 30px 0;
 	width: 98%;
 	max-width: 900px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
     
 }
 .panel_wrapper{
-        display: inline-block;
-        text-align: center;
+	display: inline-block;
+	text-align: center;
+	margin: 0px 5px;
 }
 .panel_wrapper p{
     margin-bottom: 0px;
@@ -26,8 +30,8 @@
     
     background-color: #ffffff; /* Edit this as you like */
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
     margin: 0px auto 10px auto; /* Edit this as you like */
     
     -webkit-user-select: none;
@@ -44,7 +48,7 @@
         justify-content: center;
         align-items: center;
         height: 100%;
-        font-size: 18px;
+        font-size: 20px;
         text-align: center;
         
     }
